fix VR stereo distortion on iphone6

--- a/less/playerpage.less
+++ b/less/playerpage.less
@@ -100,7 +100,7 @@ button#backfromvr {
 	  -webkit-flex-order: 2;
 	  flex:1;
 	  order: 2;
-	  min-height: 450px;
+	  min-height: 320px;	// should not exceed mobile display shorter side
 	  background: #666;
   }
   #playerWrap .stage {
